--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "t4rn",
-	"version": "1.0.0",
+	"name": "bonapoly",
+	"version": "0.1.0",
 	"private": true,
 	"workspaces": [
 		"apps/*",
@@ -13,12 +13,12 @@
 		"format": "prettier --write \"**/*.{ts,tsx,md}\""
 	},
 	"devDependencies": {
-		"prettier": "^2.7.1",
+		"prettier": "^2.8.8",
 		"turbo": "latest"
 	},
 	"engines": {
-		"pnpm": ">=7.5.0",
-		"node": ">=16.0.0"
+		"pnpm": ">=8.4.0",
+		"node": ">=18.16.0"
 	},
-	"packageManager": "pnpm@7.6.0"
+	"packageManager": "pnpm@8.4.0"
 }
