--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.18.9",
+		"@react-three/drei": "^9.17.3",
 		"@t4rn/config": "*",
 		"@types/node": "^18.6.1",
 		"@types/react": "17.0.37",
