--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,16 +1,16 @@
 {
-	"name": "@t4rn/ui",
-	"version": "0.0.0",
+	"name": "@bonapoly/ui",
+	"version": "0.1.0",
 	"main": "./index.ts",
 	"types": "./index.ts",
 	"license": "MIT",
 	"devDependencies": {
+		"@bonapoly/config": "*",
 		"@react-spring/three": "^9.5.2",
 		"@react-spring/web": "^9.5.2",
 		"@react-three/drei": "^9.17.3",
 		"@react-three/fiber": "^8.2.1",
 		"@react-three/postprocessing": "^2.5.4",
-		"@t4rn/config": "*",
 		"@types/react": "^17.0.37",
 		"@types/react-dom": "^17.0.11",
 		"@types/three": "^0.142.0",
@@ -20,6 +20,6 @@
 	"dependencies": {
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"three": "^0.142.0"
+		"three": "^0.152.2"
 	}
 }
